--- a/wear/src/main/res/layout/fragment_history_main.xml
+++ b/wear/src/main/res/layout/fragment_history_main.xml
@@ -9,7 +9,11 @@
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusableInTouchMode="true">
+
+        <requestFocus/>
+    </android.support.wearable.view.GridViewPager>
 
     <include layout="@layout/pager_pips"/>
 
