Re-factored dot page indicator into own view class

--- a/wear/src/main/res/layout/fragment_history_main.xml
+++ b/wear/src/main/res/layout/fragment_history_main.xml
@@ -15,6 +15,6 @@
         <requestFocus/>
     </android.support.wearable.view.GridViewPager>
 
-    <include layout="@layout/pager_pips"/>
+    <include layout="@layout/dot_page_indicator" />
 
 </FrameLayout>
