--- a/wear/src/main/res/layout/fragment_workout_main.xml
+++ b/wear/src/main/res/layout/fragment_workout_main.xml
@@ -71,6 +71,6 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/pager_pips"/>
+    <include layout="@layout/dot_page_indicator" />
 
 </FrameLayout>
