--- a/wear/src/main/res/layout/fragment_workout_map.xml
+++ b/wear/src/main/res/layout/fragment_workout_map.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<com.google.android.gms.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WorkoutMapFragment">
-
-    <com.google.android.gms.maps.MapView
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        map:cameraZoom="18"
-        map:uiZoomGestures="false"
-        map:uiScrollGestures="false"
-        map:uiRotateGestures="false"
-        map:uiTiltGestures="false"
-        map:ambientEnabled="true" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/map_tint"/>
-
-</FrameLayout>
+    map:cameraZoom="18"
+    map:uiZoomGestures="false"
+    map:uiScrollGestures="false"
+    map:uiRotateGestures="false"
+    map:uiTiltGestures="false"
+    map:ambientEnabled="true"
+    tools:context=".WorkoutMapFragment" />
