--- a/wear/src/main/res/layout/fragment_workout_main.xml
+++ b/wear/src/main/res/layout/fragment_workout_main.xml
@@ -66,7 +66,7 @@
             android:padding="@dimen/map_overlay_padding"
             android:layout_marginTop="@dimen/map_overlay_spacing"
             android:layout_marginBottom="@dimen/map_overlay_spacing"
-            android:src="@drawable/ic_heart_12"
+            android:src="@drawable/ic_heart"
             android:visibility="gone" />
 
     </RelativeLayout>
