--- a/wear/src/main/res/layout/fragment_history_main.xml
+++ b/wear/src/main/res/layout/fragment_history_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryMainFragment">
+    tools:context="info.saxman.whererunner.HistoryMainFragment">
 
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
