--- a/wear/src/main/res/layout/fragment_workout_map.xml
+++ b/wear/src/main/res/layout/fragment_workout_map.xml
@@ -12,4 +12,4 @@
     map:uiRotateGestures="false"
     map:uiTiltGestures="false"
     map:ambientEnabled="true"
-    tools:context=".WorkoutMapFragment" />
+    tools:context="info.saxman.whererunner.WorkoutMapFragment" />
