--- a/wear/src/main/res/layout/fragment_history_data.xml
+++ b/wear/src/main/res/layout/fragment_history_data.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".WorkoutDataFragment">
+    tools:context="info.saxman.whererunner.WorkoutDataFragment">
 
     <TextView
         android:id="@+id/date_time"
