--- a/wear/src/main/res/layout/fragment_workout_heartrate.xml
+++ b/wear/src/main/res/layout/fragment_workout_heartrate.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".WorkoutHeartRateFragment">
+    tools:context="info.saxman.whererunner.WorkoutHeartRateFragment">
 
     <TextView
         android:id="@+id/hr_title"
