New icon, new UI, bettere back button handling

--- a/wear/src/main/res/layout/action_drawer_peek.xml
+++ b/wear/src/main/res/layout/action_drawer_peek.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_margin="0dp"
     android:paddingTop="@dimen/drawer_peek_padding_top"
     android:paddingBottom="@dimen/drawer_peek_padding_bottom"
     android:gravity="center">
@@ -17,7 +18,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_toRightOf="@id/test"
-        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp"
         android:src="@drawable/ic_more_vert"/>
 
 </RelativeLayout>
