--- a/wear/src/main/res/drawable/bg_text_overlay.xml
+++ b/wear/src/main/res/drawable/bg_text_overlay.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/white" android:width="1dp"/>
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/white_80a"/>
     <corners android:radius="8dip"/>
+    <stroke
+        android:width="1px"
+        android:color="@color/semitransparent_grey" />
 </shape>
