--- a/wear/src/main/res/drawable/bg_text_overlay_ambient.xml
+++ b/wear/src/main/res/drawable/bg_text_overlay_ambient.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white_70a"/>
+    <stroke android:color="@color/white" android:width="1px"/>
+    <solid android:color="@color/black"/>
     <corners android:radius="8dip"/>
 </shape>
