--- a/wear/src/main/res/layout/fragment_workout_main.xml
+++ b/wear/src/main/res/layout/fragment_workout_main.xml
@@ -30,6 +30,11 @@
         android:format12Hour="h:mm:ss"
         android:format24Hour="H:mm:ss" />
 
+    <FrameLayout
+        android:id="@+id/dialog_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <!-- TODO move constants to dimens -->
     <ImageView
         android:id="@+id/map_button"
@@ -37,10 +42,10 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical|left"
-        android:paddingLeft="23dp"
-        android:paddingRight="5dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="4dp"
         android:layout_marginLeft="-23dp"
-        android:src="@drawable/ic_place" />
+        android:src="@drawable/ic_gps_not_fixed" />
 
     <ImageView
         android:id="@+id/heart_button"
@@ -48,9 +53,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical|right"
-        android:paddingLeft="5dp"
-        android:paddingRight="23dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="21dp"
         android:layout_marginRight="-23dp"
         android:src="@drawable/ic_heart" />
-
+    
 </FrameLayout>
