--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -10,14 +10,15 @@
     <item name="highlight_dark" type="color">@color/red_65b</item>
 
     <item name="text_primary" type="color">#CCBBBBBB</item>
-    <item name="text_dark" type="color">#CC222222</item>
+    <item name="text_dark" type="color">#CC000000</item>
 
     <item name="white_80a" type="color">#CCFFFFFF</item>
     <item name="white_70a" type="color">#B3FFFFFF</item>
     <item name="white_60a" type="color">#99FFFFFF</item>
     <item name="white_50a" type="color">#80FFFFFF</item>
 
-    <item name="location_accuracy_circle" type="color">#220000FF</item>
+    <item name="location_accuracy_fill" type="color">#220000FF</item>
+    <item name="location_accuracy_stroke" type="color">#660000FF</item>
 
     <!-- Material Design Indigo 500 palette for wearables -->
     <item name="indigo" type="color">#FF3F51B5</item>
