--- a/wear/src/main/res/layout/dot_page_indicator.xml
+++ b/wear/src/main/res/layout/dot_page_indicator.xml
@@ -7,7 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|right"
-    android:layout_marginRight="@dimen/map_overlay_margin"
+    android:layout_marginRight="@dimen/clock_margin"
     android:orientation="vertical"
     android:gravity="center"
     whererunner:dotSpacing="@dimen/dot_page_indicator_spacing"
