--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Margin between map overlays and the edge of the map. -->
-    <dimen name="map_overlay_margin">5dp</dimen>
-
-    <dimen name="map_overlay_padding">3dp</dimen>
-    <dimen name="map_overlay_padding_vertical">0dp</dimen>
-    <dimen name="map_overlay_padding_horizontal">5dp</dimen>
-
-    <!-- Spacing between map overlay items. Visual spacing will be 2x this amount. -->
-    <dimen name="map_overlay_spacing">2dp</dimen>
+    <dimen name="clock_margin">5dp</dimen>
+    <dimen name="clock_padding_vertical">0dp</dimen>
+    <dimen name="clock_padding_horizontal">5dp</dimen>
 
     <!-- Spacing between page indicator dots, implemented as a margin. Visual spacing will be 2x this amount. -->
     <dimen name="dot_page_indicator_spacing">1dp</dimen>
@@ -23,4 +17,7 @@
     <dimen name="drawer_peek_padding_bottom">0dp</dimen>
 
     <dimen name="workout_data_top_margin">20dp</dimen>
+
+    <dimen name="alert_view_height">75dp</dimen>
+    <dimen name="alert_view_height_neg">-75dp</dimen>
 </resources>
