--- a/wear/src/main/res/layout/fragment_workout_data.xml
+++ b/wear/src/main/res/layout/fragment_workout_data.xml
@@ -4,48 +4,51 @@
     android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="-10dp"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="info.saxman.whererunner.WorkoutDataFragment">
 
     <TextView
         android:id="@+id/distance_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/workout_data_top_margin"
-        android:text="@string/distance_total" />
+        android:text="@string/distance_total"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/distance"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/na"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/speed_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/speed_current_average" />
+        android:text="@string/speed_current_average"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/speed"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/na"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/duration_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/time_elapsed" />
+        android:text="@string/time_elapsed"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/duration"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/na"
+        style="@style/text_data" />
 
 </LinearLayout>
