--- a/wear/src/main/res/drawable/bg_button_round.xml
+++ b/wear/src/main/res/drawable/bg_button_round.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/white_80a" />
-    <stroke
-        android:width="1px"
-        android:color="@color/semitransparent_grey" />
+    <stroke android:width="1px" android:color="@color/semitransparent_grey" />
 </shape>
