--- a/wear/src/main/res/layout/fragment_history_data.xml
+++ b/wear/src/main/res/layout/fragment_history_data.xml
@@ -10,48 +10,47 @@
 
     <TextView
         android:id="@+id/date_time"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp" />
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/distance_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/distance_total" />
+        android:text="@string/distance_total"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/distance"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/speed_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/speed_average_max" />
+        android:text="@string/speed_average_max"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/speed"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/duration_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/time_elapsed" />
+        android:text="@string/time_elapsed"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/duration"
-        style="@style/text_header"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        style="@style/text_data" />
 
 </LinearLayout>
