--- a/wear/src/main/res/layout/fragment_workout_heartrate.xml
+++ b/wear/src/main/res/layout/fragment_workout_heartrate.xml
@@ -4,59 +4,58 @@
     android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="-10dp"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="info.saxman.whererunner.WorkoutHeartRateFragment">
 
     <TextView
         android:id="@+id/hr_title"
-        style="@style/text_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/workout_data_top_margin"
-        android:layout_marginBottom="2dp"
-        android:text="@string/heart_rate" />
+        android:text="@string/heart_rate"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/hr_current_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hr_current" />
+        android:text="@string/hr_current"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/hr_current"
-        style="@style/text_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hrm_no_data" />
+        android:text="@string/hrm_no_data"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/hr_average_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hr_average" />
+        android:text="@string/hr_average"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/hr_average"
-        style="@style/text_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hrm_no_data" />
+        android:text="@string/hrm_no_data"
+        style="@style/text_data" />
 
     <TextView
         android:id="@+id/hr_min_max_title"
-        style="@style/text_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hr_min_max" />
+        android:text="@string/hr_min_max"
+        style="@style/text_data_header" />
 
     <TextView
         android:id="@+id/hr_min_max"
-        style="@style/text_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hrm_no_data" />
+        android:text="@string/hrm_no_data"
+        style="@style/text_data" />
 
 </LinearLayout>
