--- a/wear/src/main/res/layout/fragment_workout_map.xml
+++ b/wear/src/main/res/layout/fragment_workout_map.xml
@@ -6,8 +6,9 @@
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_grey"
     map:cameraZoom="18"
-    map:uiZoomGestures="false"
+    map:uiZoomGestures="true"
     map:uiScrollGestures="false"
     map:uiRotateGestures="false"
     map:uiTiltGestures="false"
