Ambient bug fix and HR reveal in main view

--- a/wear/src/main/res/layout/fragment_workout_data.xml
+++ b/wear/src/main/res/layout/fragment_workout_data.xml
@@ -4,7 +4,7 @@
     android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="-10dp"
+    android:layout_marginTop="35dp"
     android:gravity="center"
     android:orientation="vertical"
     tools:context="info.saxman.whererunner.WorkoutDataFragment">
@@ -49,6 +49,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/na"
+        style="@style/text_data" />
+
+    <TextView
+        android:id="@+id/heart_rate_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/heart_rate"
+        android:visibility="invisible"
+        style="@style/text_data_header" />
+
+    <TextView
+        android:id="@+id/heart_rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hrm_no_data"
+        android:visibility="invisible"
         style="@style/text_data" />
 
 </LinearLayout>
